vault/test-web-app-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: vault
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      serviceAccountName: vault-release
      containers:
        - name: app
          image: hashieducation/simple-vault-client:latest
          imagePullPolicy: Always
