vault/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vault-ingressroute
  namespace: vault
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`vault.local.wololoaeyoyo.com`)
    kind: Rule
    services:
    - name: vault
      port: 8200
      scheme: http
